--- a/rob-the-meter/index.html
+++ b/rob-the-meter/index.html
@@ -43,6 +43,8 @@
     updateStuds()
 </script>
 <body>
+    <h1>Rob The Meter <sup>v1.0</sup></h1>
+    <h2><i>Meters ↔ Roblox Studs</i> converter</h2>
     <form>
         <label for="meters">Meters:</label><br>
         <input type="text" id="meters" name="meters" value="0" oninput="updateStuds()"><br>
@@ -50,6 +52,9 @@
         <input type="text" id="studs" name="studs" value="0" oninput="updateMeters()"><br><br>
         <input type="checkbox" id="real" name="real" checked=false oninput="realModeInit()">
         <label for="vehicle3">Real</label>
-      </form>
+    </form>
+    <br>
+    <p> © 2022 Leon Shepelev</p>
+    <p><strong>E-Mail: </strong>kyleusnaff@gmail.com</p>
 </body>
 </html>
