--- a/rob-the-meter/index.html
+++ b/rob-the-meter/index.html
@@ -43,7 +43,7 @@
     updateStuds()
 </script>
 <body>
-    <h1>Rob The Meter <sup>v1.0</sup></h1>
+    <h1>Rob The Meter <sup>v1.0.1</sup></h1>
     <h2><i>Meters ↔ Roblox Studs</i> converter</h2>
     <form>
         <label for="meters">Meters:</label><br>
@@ -51,10 +51,10 @@
         <label for="studs">Studs:</label><br>
         <input type="text" id="studs" name="studs" value="0" oninput="updateMeters()"><br><br>
         <input type="checkbox" id="real" name="real" checked=false oninput="realModeInit()">
-        <label for="vehicle3">Real</label>
+        <label for="vehicle3">Real mode*</label>
     </form>
-    <br>
-    <p> © 2022 Leon Shepelev</p>
-    <p><strong>E-Mail: </strong>kyleusnaff@gmail.com</p>
+    <p>*<i>Real mode</i> uses the condition that the real person is 5.7 times bigger than the Roblox player.</p>
+    <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact E-Mail: </strong>kyleusnaff@gmail.com</p>
+    <p style="position: absolute;bottom: 0;right: 1em;">© 2022 Leon Shepelev</p>
 </body>
 </html>
