--- a/rob-the-meter/index.html
+++ b/rob-the-meter/index.html
@@ -53,7 +53,7 @@
         <input type="checkbox" id="real" name="real" checked=false oninput="realModeInit()">
         <label for="vehicle3">Real mode*</label>
     </form>
-    <p>*<i>Real mode</i> uses the condition that the real person is 5.7 times bigger than the Roblox player.</p>
+    <p>*<i>Real mode</i> uses the condition that the real human is 5.7 times bigger than the Roblox player.</p>
     <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact E-Mail: </strong>kyleusnaff@gmail.com</p>
     <p style="position: absolute;bottom: 0;right: 1em;">© 2022 Leon Shepelev</p>
 </body>
