--- a/404.html
+++ b/404.html
@@ -1,2 +1,10 @@
-<h1>Error #404</h1>
-<a href="/">Home...</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Error #404</title>
+</head>
+<body>
+    <h1>Error #404</h1>
+    <a href="/">Home...</a>
+</body>
+</html>
