--- a/sec/rob-the-meter/index.html
+++ b/sec/rob-the-meter/index.html
@@ -45,7 +45,7 @@
         updateStuds()
     </script>
 <body>
-    <h1>Rob The Meter <sup>v1.1.1</sup></h1>
+    <h1>Rob The Meter <sup>v1.1.2</sup></h1>
     <h2><i>Meters ↔ Roblox Studs</i> converter</h2>
     <form>
         <label for="meters">Meters:</label><br>
@@ -56,7 +56,7 @@
         <label for="checkbox">Real mode*</label>
     </form>
     <p>*<i>Real mode</i> uses the condition that the real human is 5.7 times bigger than the Roblox player (calculated by me personally).</p>
-    <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com">kyleusnaff@gmail.com</a></p>
+    <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
     <p style="position: absolute;bottom: 0;right: 1em;">© 2022 Leon Shepelev</p>
 </body>
 </html>
