I hope its final on today...
Signed-off-by: Procybit <kyleusnaff@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Hello :)</title>
-		<link rel="icon" type="image/x-icon" href=".ico">
+		<link rel="icon" type="image/x-icon" href="./index.ico">
 		<!--<meta http-equiv="refresh" content="0; url=https://procybit.github.io/sec/rob-the-meter/" />-->
 	</head>
 	<body>
