--- a/404.html
+++ b/404.html
@@ -2,9 +2,11 @@
 	<html>
 	<head>
 		<title>Error #404</title>
+		<link rel="icon" type="image/x-icon" href="./404.ico">
 	</head>
 	<body>
 		<h1>Error #404</h1>
+		<img src="./404rock.gif"/><br>
 		<a href="/">Home...</a>
 	</body>
 </html>
