--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Error #404</h1>
-		<img src="./404rock.gif"/><br>
+		<img src="/404rock.gif"/><br>
 		<a href="/">Home...</a>
 	</body>
 </html>
