--- a/sec/rob-the-meter/index.html
+++ b/sec/rob-the-meter/index.html
@@ -58,5 +58,6 @@
 		<p>*<i>Real mode</i> uses the condition that the real human is 5.7 times bigger than the Roblox player (calculated by me personally).</p>
 		<p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
 		<p style="position: absolute;bottom: 0;right: 1em;">© 2022 Leon Shepelev</p>
+		<a href="/">Home...</a>
 	</body>
 </html>
