--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 		<title>Error #404</title>
-		<link rel="icon" type="image/x-icon" href="./404.ico">
+		<link rel="icon" type="image/x-icon" href="/404.ico">
 	</head>
 	<body>
 		<h1>Error #404</h1>
