--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<a href="./sec/rob-the-meter/index.html">→ Rob The Meter</a>
 		<br/>
 		<a href="./archive/">→ Archive</a>
+		<a href="https://shopmrbeast.com/">→ ShopMrBeast</a>
 		<p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
 		<p style="position: absolute;bottom: 0;right: 1em;">© 2022 Leon Shepelev</p>
 	</body>
