--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<br/>
 		<a href="./archive/">→ Archive</a>
 		<br/>
+		<a href="./chatgpt/">→ ChatGPT section</a>
+		<br/>
 		<a href="https://shopmrbeast.com/">→ ShopMrBeast</a>
 		<p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
 		<p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
