--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -11,10 +11,11 @@
         }
 
         .image-gallery img {
-            max-width: 200px;
-            max-height: 200px;
+            max-width: 300px;
+            max-height: 300px;
             margin: 10px;
             border: 1px solid #ccc;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -24,5 +25,7 @@
         <img src="alpha.svg" alt="α-particle">
         <!-- Add more images here as needed -->
     </div>
+    <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
+	<p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
 </body>
 </html>
