--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -25,7 +25,8 @@
         <img src="alpha.svg" alt="α-particle">
         <!-- Add more images here as needed -->
     </div>
+    <a href="/">Home...</a>
     <p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
-	<p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
+    <p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
 </body>
 </html>
