--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -22,7 +22,7 @@
 <body>
     <h1>Image Gallery</h1>
     <div class="image-gallery">
-        <img src="alpha.svg" alt="α-particle">
+        <img src="alpha.svg">
         <!-- Add more images here as needed -->
     </div>
     <a href="/">Home...</a>
