--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -2,7 +2,7 @@
 <!--code mostly by ChatGPT-->
 <html>
 <head>
-    <title>Image Gallery</title>
+    <title>ChatGPT Gallery</title>
     <style>
         .image-gallery {
             display: flex;
@@ -23,6 +23,7 @@
     <h1>Image Gallery</h1>
     <div class="image-gallery">
         <img src="alpha.svg">
+        <img src="beta.svg">
         <!-- Add more images here as needed -->
     </div>
     <a href="/">Home...</a>
