--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -2,7 +2,7 @@
 <!--code mostly by ChatGPT-->
 <html>
 <head>
-    <title>ChatGPT Gallery</title>
+    <title>ChatGPT</title>
     <style>
         .image-gallery {
             display: flex;
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <h1>Image Gallery</h1>
+    <h1>ChatGPT content gallery</h1>
     <div class="image-gallery">
         <img src="alpha.svg">
         <img src="beta.svg">
