--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -24,6 +24,7 @@
     <div class="image-gallery">
         <img src="alpha.svg">
         <img src="beta.svg">
+        <img src="gamma.svg">
         <!-- Add more images here as needed -->
     </div>
     <a href="/">Home...</a>
