--- a/chatgpt/index.html
+++ b/chatgpt/index.html
@@ -25,6 +25,8 @@
         <img src="alpha.svg">
         <img src="beta.svg">
         <img src="gamma.svg">
+        <img src="neutrino.svg">
+        
         <!-- Add more images here as needed -->
     </div>
     <a href="/">Home...</a>
