--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<br/>
 		<br/>
 		<a href="./chatgpt/">→ ChatGPT section</a>
+		<br/>
+		<br/>
+		<a href="./vizhe/">→ Vigenère cipher</a>
 		
 		<p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
 		<p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
