--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<br/>
 		<br/>
 		<a href="./vizhe/">→ Vigenère cipher</a>
-		
+		<br/>
+		<br/>
+		<a href="https://github.com/Procybit/procybit.github.io/">→ Site's repository (GitHub)</a>
 		<p style="position: absolute;bottom: 0;left: 1em;"><strong>Contact e-mail:</strong> <a href="mailto:kyleusnaff@gmail.com" target="_blank">kyleusnaff@gmail.com</a></p>
 		<p style="position: absolute;bottom: 0;right: 1em;">© 2023 Leon Shepelev</p>
 	</body>
