--- a/vizhe/index.html
+++ b/vizhe/index.html
@@ -45,7 +45,7 @@
 
 				if (alphabetArr.indexOf(inputChar) !== -1) {
 					var inputIndex = alphabetArr.indexOf(inputChar);
-					var keyIndex = alphabetArr.indexOf(keyChar);
+					// var keyIndex = alphabetArr.indexOf(keyChar);
 					var resultIndex;
 
 					if (mode === 'encrypt') {
